k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: tvapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: YOUR_DOCKERHUB_USERNAME/tv-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: tvapp
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
